--- a/views/admin/kpi/page_edit_balls_kpi.ejs
+++ b/views/admin/kpi/page_edit_balls_kpi.ejs
@@ -33,7 +33,7 @@
 				</form>
 			<%} %>
 			<% if(choose) {%>
-				<form name="editballskpi" class="formborderadmin" style="width: 95%;" action="/edit_balls_kpi" method="post">
+				<form name="editballskpi" class="formborderadmin" style="width: 95%;" action="" method="post">
 					<input type="hidden" name="name" value=<%=name%>>
 					Выбранный ПЭД: <%=description%>
 					<br>
