--- a/views/admin/main_page.ejs
+++ b/views/admin/main_page.ejs
@@ -15,7 +15,7 @@
 			<form action="" method="get">
 				<p class="namelist">История действий пользователей за
 					<input type="date" name="date" id="date" class="date" value=<%=date%>>
-					<input type="submit" value="вывести историю пользователей">
+					<input type="submit" class="buttonmypage" value="Вывести">
 				</p>
 			</form>
 			<ul class="logs" id="logs">
