--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -14,7 +14,7 @@
 			<% if(close) {%>
 				<p class="errortext">Доступ к личным кабинетам закрыт</p>
 			<%} %>
-			<% if(checkpassword) {%>
+			<% if(checkPassword) {%>
 				<p class="errortext">Неправильно введен логин или пароль</p>
 			<%} %>
 			<label>Логин</label>
