--- a/views/pps/main_page.ejs
+++ b/views/pps/main_page.ejs
@@ -15,8 +15,8 @@
 			</form>
 			<br/> 
 			<h1><div id="name"><%=name %>, <%=position %></div></h1><br>
-			<% if(objperiod.notify) {%>
-				<p style="color: red; font-size: 20px;">Внимание! Скоро будет расчет премии за период с <%=objperiod.date1Str %> по <%=objperiod.date2Str %></p>
+			<% if(objPeriod.notify) {%>
+				<p style="color: red; font-size: 20px;">Внимание! Скоро будет расчет премии за период с <%=objPeriod.date1Str %> по <%=objPeriod.date2Str %></p>
 				<br><br>
 			<%} %>
 			<form class="flexparent">
