add update structure

--- a/views/admin/partials/menu.ejs
+++ b/views/admin/partials/menu.ejs
@@ -7,6 +7,7 @@
 				<li><a href="/admin/users/get_users">Список</a></li>
 				<li><a href="/admin/users/add_user">Добавить</a></li>
 				<li><a href="/admin/users/add_users_from_file">Добавить с файла</a></li>
+				<li><a href="/admin/users/add_users_from_file2">Добавить с файла вариант 2</a></li>
 				<li><a href="/admin/users/delete_user">Удалить</a></li>
 			</ul>
 		</li>
@@ -20,8 +21,14 @@
 			</ul>
 		</li>
 		<li><a href="/admin/get_balls_of_users">Значения ПЭД</a></li>
+		<li><a>Структура</a>
+			<ul>
+				<li><a href="/admin/get_structure">Список</a></li>
+				<li><a href="/admin/update_structure">Обновить</a></li>
+			</ul>
+		</li>
 		<li><a href="/admin/set_period">Текущий период</a></li>
-		<li><a href="/admin/close_accounts">Доступ в личные кабинеты</a></li>
+		<li><a href="/admin/close_accounts">Доступ в ЛК</a></li>
 		<li><form action="/exit" method="post"><button>Выход</button></form></li>
 	</ul>
 </nav>
