--- a/views/pps/page_add_value_kpi.ejs
+++ b/views/pps/page_add_value_kpi.ejs
@@ -7,14 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="edit_kpi.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 </head>
 <body>
 	<div class="wrapper">
-		<header>
-			<a href="/my_page" class="exitt" >Назад</a>
-		</header>
+		<%- include("partials/menu.ejs") %>
 		<div class="content">
-			<h2 style="margin-left: 10px; margin-top: -10px;">Отметить выполнение ПЭД</h2>
+			<h1 style="margin-left: 10px;">Отметить выполнение ПЭД</h1>
 			<div class="page">
 				<aside>
 					<ul class="treeCSS">
