--- a/public/general_style/menu.css
+++ b/public/general_style/menu.css
@@ -1,8 +1,8 @@
 
 nav {
 	background-color: white;
-  box-shadow: 0 3px 10px -2px rgba(0,0,0,.1);
-  border: 1px solid rgba(0,0,0,.1);
+  	box-shadow: 0 3px 10px -2px rgba(0,0,0,.1);
+  	border: 1px solid rgba(0,0,0,.1);
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
@@ -81,5 +81,8 @@ body, html {
 	padding: 0;
 	margin: 0;
 	background: white;
-	margin-top: 15px;
+	margin-top: 10px;
+}
+.content {
+	margin-top: 20px;
 }
