--- a/views/pps/page_values_kpi.ejs
+++ b/views/pps/page_values_kpi.ejs
@@ -6,14 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="../../general_style/list.css">
 	<link rel="stylesheet" type="text/css" href="../../general_style/footer.css">
 	<link rel="stylesheet" type="text/css" href="../../general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="../../general_style/menu.css">
 </head>
 <body>
 	<div class="wrapper">
-		<header>
-			<a href="/my_page" class="exitt">Назад</a>
-		</header>
+		<%- include("partials/menu.ejs") %>
 		<div class="content">
-			<h2>Значения ПЭД</h2>
+			<h1>Значения ПЭД</h1>
 			<% if(kpi.length != 0) {%>
 				<table>
 					<tr>
