--- a/views/admin/structure/page_update_structure.ejs
+++ b/views/admin/structure/page_update_structure.ejs
@@ -19,6 +19,7 @@
 					должна содержаться информация о структуре университета в следующем формате:</p>
 				<p>В столбце <b>A</b> указывается факультут</p>
 				<p>В столбце <b>B</b> указывается кафедра</p>
+				<p>Кафедра указывается без слова "Кафедра" в именительном падеже</p>
 			</div>
 			<% if(action == 1) {%>
 				<p class="uspeshno">Успешно</p>
