--- a/views/admin/users/partials/report_add_users.ejs
+++ b/views/admin/users/partials/report_add_users.ejs
@@ -1,9 +1,13 @@
-<div>Добавлено <%=countAdd%> из <%=users.length%></div>
-<table style="margin-left: 20px;">
+<div>Добавлено <%=countAdd%> из <%=users.length%>:</div>
+<div>Успешно добавлено - <span style="color:green;"><%=countAdd%></span></div>
+<div>Найдено с ошибками - <span style="color:red;"><%=counts.countError%></span></div>
+<div>Пропущено повторяющихся - <span style="color:rgb(0, 225, 255);"><%=counts.countIgnore%></span></div>
+<div>Пропущено сотрудников, имеющих внешнее совместительство - <span style="color:rgb(112, 0, 187);"><%=counts.countExternal%></span></div>
+<div>Пропущено найденых в БД - <span style="color:grey;"><%=counts.countExists%></span></div>
+<table style="margin-left: 0;">
     <tr>
         <th><h4>Номер</h4></th>
         <th><h4>ФИО</h4></th>
-        <th><h4>Занятость</h4></th>
         <th><h4>Должность</h4></th>
         <th><h4>Факультет</h4></th>
         <th><h4>Кафедра</h4></th>
@@ -15,21 +19,21 @@
         <tr>
             <% if(users[i].ignore) {%>
                 <td style="color:rgb(0, 225, 255);"><%=users[i].numb %></td>
+                <td style="color:rgb(0, 225, 255);"><%=users[i].name %></td>
+            <%} else if(users[i].exists) {%>
+                <td style="color: grey;"><%=users[i].numb %></td>
+                <td style="color:grey;"><%=users[i].name %></td>
+            <%} else if(users[i].extern) {%>
+                 <td style="color:rgb(112, 0, 187);"><%=users[i].numb %></td>
+                 <td style="color:rgb(112, 0, 187);"><%=users[i].name %></td>
             <%} else if(users[i].error){%>
                 <td style="color:red;"><%=users[i].numb %></td>
-            <%} else {%>
-                <td style="color:green;"><%=users[i].numb %></td>
-            <%} %>
-
-            <% if(users[i].ignore) {%>
-                <td style="color:rgb(0, 225, 255);"><%=users[i].name %></td>
-            <%} else if(users[i].error){%>
                 <td style="color:red;"><%=users[i].name %></td>
             <%} else {%>
+                <td style="color:green;"><%=users[i].numb %></td>
                 <td style="color:green;"><%=users[i].name %></td>
             <%} %>
-            
-            <td><%=users[i].empl %></td>
+
             <% if(users[i].errField != 'position') {%>
                 <td><%=users[i].position %></td>
             <%} else {%>
@@ -39,6 +43,7 @@
                     <td style="color:red;">Ошибка!</td> 
                 <%} %>
             <%} %>
+
             <% if(users[i].errField != 'faculty') {%>
                 <td><%=users[i].faculty %></td>
             <%} else {%>
@@ -48,6 +53,7 @@
                     <td style="color:red;">Ошибка!</td> 
                 <%} %>
             <%} %>
+
             <% if(users[i].errField != 'department') {%>
                 <td><%=users[i].department %></td>
             <%} else {%>
@@ -57,10 +63,13 @@
                     <td style="color:red;">Ошибка!</td> 
                 <%} %>
            <%} %>
+
            <% if(users[i].errField != 'login' && !users[i].error) {%>
                 <td><%=users[i].login %></td>
             <%} else if(users[i].errField == 'login') {%>
-                <% if(users[i].login) {%>
+                <% if(users[i].login && users[i].exists) {%>
+                    <td style="color:grey;"><%=users[i].login %></td>
+                <%} else if(users[i].login) {%>
                     <td style="color:red;"><%=users[i].login %></td>
                 <%} else {%>
                     <td style="color:red;">Ошибка!</td> 
@@ -68,9 +77,16 @@
             <%} else {%>
                 <td></td> 
             <%} %>
+
             <% if(users[i].ignore) {%>
                 <td></td>
                 <td style="color:rgb(0, 225, 255);"><%=users[i].error %></td>
+            <%} else if(users[i].extern) {%>
+                 <td></td>
+                <td style="color:rgb(112, 0, 187);"><%=users[i].error %></td>
+            <%} else if(users[i].exists) {%>
+                <td></td>
+                <td style="color:grey;"><%=users[i].error %></td>
             <%} else if(users[i].error) {%>
                 <td></td>
                 <td style="color:red;"><%=users[i].error %></td>
