--- a/views/admin/users/page_add_users_from_file.ejs
+++ b/views/admin/users/page_add_users_from_file.ejs
@@ -35,7 +35,7 @@
 				<input type="file" name="file" required>
 				<input type="submit" class="buttonmypage" value="Добавить">
 			</form>
-			<p class="errormess">Внимание! При отсутствии информации о сотруднике ячейку столбца, 
+			<p style="color: brown;">Внимание! При отсутствии информации о сотруднике ячейку столбца, 
 				соответсвующего данной информации оставить пустой, без каких-либо символов.
 				Если эта информация является обязательной к заполнению (отмечена *), 
 				то данную информацию стоит уточнить и записать в прикрепляемый Excel-файл.</p>
