--- a/views/admin/users/page_add_users_from_file2.ejs
+++ b/views/admin/users/page_add_users_from_file2.ejs
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/loader.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -19,10 +20,11 @@
 					<p>В каждой строке файла, начиная с первой (без перечисления названий в первой строке), 
 						должна содержаться информация о сотруднике в следующем формате:</p>
 					<p>В столбце <b>A</b> указывается порядковый номер</p>
-					<p>В столбце <b>B</b> указывается полное ФИО сотрудника*</p>
-					<p>В столбце <b>C</b> указывается должность сотрудника*</p>
+					<p>В столбце <b>B</b> указывается полное <b>ФИО</b> сотрудника*</p>
+					<p>В столбце <b>C</b> указывается <b>должность</b> сотрудника*</p>
 					<p>В столбце <b>D</b> указывается вид занятости</p>
-					<p>В столбце <b>E</b> указывается кафедра, на которой работает сотрудник</p>
+					<p>В столбце <b>E</b> указывается <b>подразделение</b>, в котором работает сотрудник</p>
+					<p>Для декана - это факультет, для остальных должностей - кафедра</p>
 					<p>* - обязательные к заполнению поля</p>
 				</div>
 				<% if(action == 1) {%>
@@ -32,14 +34,10 @@
 					<p class="errormess">Ошибка добавления</p>
 				<%} %>
 				<form enctype="multipart/form-data" action="" 
-				method="post" class="formborderadmin">
+				method="post" class="formborderadmin" id="form-users_from_file2">
 					<input type="file" name="file" required>
-					<input type="submit" class="buttonmypage" value="Добавить">
+					<input type="submit" class="buttonmypage" id="but-file2" value="Добавить">
 				</form>
-				<p class="errormess">Внимание! При отсутствии информации о сотруднике ячейку столбца, 
-					соответсвующего данной информации оставить пустой, без каких-либо символов.
-					Если эта информация является обязательной к заполнению (отмечена *), 
-					то данную информацию стоит уточнить и записать в прикрепляемый Excel-файл.</p>
 			<%} else {%>
 				<%- include("./partials/report_add_users.ejs") %>
 			<%} %>
@@ -48,6 +46,8 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
-	
+	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
+	<script type="text/javascript" src="./add_users_from_file2.js"></script>
 </body>
 </html>
