--- a/views/admin/kpi/partials/form_add_kpi.ejs
+++ b/views/admin/kpi/partials/form_add_kpi.ejs
@@ -1,8 +1,7 @@
+<h2>Добавление Показателя эффективности деятельности</h2>
 <form name="addkpi" action="" method="post" class="form-add" style="width: 80%; margin-top: 5%;">
 	<div class="form-inner">
-		<h3>Добавить Показатель эффективности деятельности</h3>
-		<div class="" id="error"></div>
-		<br>
+		<div class="error-text" id="error"></div>
 		<div class="input__container" id="infokpi">
 			<div>
 				<label>Шифр</label>
