--- a/views/admin/users/page_add_users_from_file2.ejs
+++ b/views/admin/users/page_add_users_from_file2.ejs
@@ -14,18 +14,24 @@
 	<div class="wrapper">
 		<%- include("../partials/menu.ejs") %>
 		<div class="content">
+			<h1>Добавление пользователей с Excel-файла</h1>
+			<hr>
 			<% if(!report) {%>
 				<div>
 					<p>Необходимо прикрепить Excel-файл.</p>
 					<p>В каждой строке файла, начиная с первой (без перечисления названий в первой строке), 
 						должна содержаться информация о сотруднике в следующем формате:</p>
-					<p>В столбце <b>A</b> указывается порядковый номер</p>
-					<p>В столбце <b>B</b> указывается полное <b>ФИО</b> сотрудника*</p>
-					<p>В столбце <b>C</b> указывается <b>должность</b> сотрудника*</p>
-					<p>В столбце <b>D</b> указывается вид занятости</p>
+					<p>В столбце <b>A</b> указывается порядковый номер (можно оставить пустым)</p>
+					<p>В столбце <b>B</b> указывается полное <b>ФИО</b> сотрудника</p>
+					<p>В столбце <b>C</b> указывается <b>должность</b> сотрудника в именительном падеже</p>
+					<p>В столбце <b>D</b> указывается вид занятости (основное место работы, внутреннее совместительство или внешнее совместительство)</p>
 					<p>В столбце <b>E</b> указывается <b>подразделение</b>, в котором работает сотрудник</p>
 					<p>Для декана - это факультет, для остальных должностей - кафедра</p>
-					<p>* - обязательные к заполнению поля</p>
+					<p>В столбце <b>G</b> можно вручную задать логин</p>
+					<p>В столбце <b>H</b> можно вручную задать пароль</p>
+					<p style="color: chocolate;">Внимание! Логин и пароль сотрудников генерируются сервером. 
+						При возникновении конфликтных ситуаций Вы можете вручную задать логин или пароль сотрудника, записав его в соответствующее поле. 
+						Однако рекомендуется оставлять эти поля пустыми.</p>
 				</div>
 				<% if(action == 1) {%>
 					<p class="uspeshno">Успешно</p>
@@ -33,10 +39,16 @@
 				<% if(action == 2) {%>
 					<p class="errormess">Ошибка добавления</p>
 				<%} %>
-				<form enctype="multipart/form-data" action="" 
+				<form enctype="multipart/form-data" action=""  
 				method="post" class="formborderadmin" id="form-users_from_file2">
-					<input type="file" name="file" required>
-					<input type="submit" class="buttonmypage" id="but-file2" value="Добавить">
+					<div class="col-form">
+						<input type="checkbox" class="checkbox" name="del_pps" id="del_pps">
+						<label for="del_pps">Удалить всех пользователей ППС перед добавлением</label>
+					</div>
+					<div class="col-form">
+						<input type="file" name="file" required>
+						<input type="submit" class="buttonmypage" id="but-file2" value="Добавить">
+					</div>
 				</form>
 			<%} else {%>
 				<%- include("./partials/report_add_users.ejs") %>
