--- a/views/admin/users/partials/form_add_user.ejs
+++ b/views/admin/users/partials/form_add_user.ejs
@@ -1,7 +1,7 @@
 <form name="adduser" action="" method="post" class="form-add" style="margin-top: 5%;">
 	<div class="form-inner">
 		<h3>Добавить пользователя</h3>
-		<div class="" id="error"></div>
+		<div class="error-text" id="error"></div>
 		<div>
 			<label>ФИО</label>
 			<input type="text" name="name" id="name" placeholder="Иванов Иван Иванович" required>
