--- a/views/pps/partials/menu.ejs
+++ b/views/pps/partials/menu.ejs
@@ -7,7 +7,7 @@
 		<% if(level) {%>
 			<li><a href="/verify">Проверить ПЭДы ППС</a></li>
 		<%} %>
-		<li><a href="/my_page">Настройки</a></li>
+		<li><a href="/settings">Настройки</a></li>
 		<li><form action="/exit" method="post"><button>Выход</button></form></li>
 	</ul>
 </nav>
