--- a/public/general_style/form.css
+++ b/public/general_style/form.css
@@ -2,7 +2,7 @@
 .form-add {
 	position: relative;
 	width: 50%;
-	margin: 10% auto;
+	margin: 3% auto;
 	background: white;
 	border-radius: 30px;
 	border: 2px solid #A1B9D5;
@@ -162,6 +162,51 @@
 	box-shadow: 0 0 0 3px rgba(255, 255, 0, .7);
 }
 
+.checkbox {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+	margin: 10px 0 0 20px;
+}
+.checkbox + label {
+	position: relative;
+	padding: 0 0 0 60px;
+	cursor: pointer;
+}
+.checkbox + label:before {
+	content: '';
+	position: absolute;
+	top: -4px;
+	left: 0;
+	width: 50px;
+	height: 26px;
+	border-radius: 13px;
+	background: #CDD1DA;
+	box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
+	transition: .2s;
+}
+.checkbox + label:after {
+	content: '';
+	position: absolute;
+	top: -2px;
+	left: 2px;
+	width: 22px;
+	height: 22px;
+	border-radius: 10px;
+	background: #FFF;
+	box-shadow: 0 2px 5px rgba(0,0,0,.3);
+	transition: .2s;
+}
+.checkbox:checked + label:before {
+	background: #9FD468;
+}
+.checkbox:checked + label:after {
+	left: 26px;
+}
+.checkbox:focus + label:before {
+	box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(0,0,0,.2);
+}
+
 textarea {
 	display: block;
 	width: 90%;
@@ -210,4 +255,12 @@ textarea {
 	border-radius: 20px;
 	border: 1px solid #A1B9D5;
 	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
+}
+
+.error-text {
+	color: red;
+}
+
+.col-form {
+	margin: 15px 0;
 }
