--- a/public/general_style/stylebut.css
+++ b/public/general_style/stylebut.css
@@ -109,16 +109,18 @@
 		}
 
 /*рамка форм в админской панели"*/
-		.formborderadmin{
-			text-align: center;  
-			padding: 1%;
+		.formborderadmin {
+			padding: 20px 0 0 50px;
 			border: 1px solid #A1B9D5;
 			font-size: 16px;
 			font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-			width: 80%;
-			margin: 5% auto;
-			box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
-			border-radius: 15px;
+			width: 100%;
+			margin-top: 10px;
+			border-radius: 10px;
+		}
+		.formborderadmin h1{
+			text-align: center;
+			margin-bottom: 20px;
 		}
 
 /*стили дат"*/
