--- a/views/admin/partials/menu.ejs
+++ b/views/admin/partials/menu.ejs
@@ -12,7 +12,7 @@
 			</ul>
 		</li>
 		
-		<li><a>ПЭДы</a>
+		<li><a>ПЭД</a>
 			<ul>
 				<li><a href="/admin/kpi/get_kpi">Список</a></li>
 				<li><a href="/admin/kpi/add_kpi">Добавить</a></li>
@@ -27,8 +27,7 @@
 				<li><a href="/admin/update_structure">Обновить</a></li>
 			</ul>
 		</li>
-		<li><a href="/admin/set_period">Текущий период</a></li>
-		<li><a href="/admin/close_accounts">Доступ в ЛК</a></li>
+		<li><a href="/admin/set_period">Настройки</a></li>
 		<li><form action="/exit" method="post"><button>Выход</button></form></li>
 	</ul>
 </nav>
