--- a/public/general_style/stylebut.css
+++ b/public/general_style/stylebut.css
@@ -118,9 +118,12 @@
 			margin-top: 10px;
 			border-radius: 10px;
 		}
-		.formborderadmin h1{
+		.formborderadmin h1,h2{
 			text-align: center;
 			margin-bottom: 20px;
+			font-family: 'Roboto', sans-serif;
+			font-weight: normal;
+			color:  #424949;
 		}
 
 /*стили дат"*/
