--- a/views/admin/partials/menu.ejs
+++ b/views/admin/partials/menu.ejs
@@ -21,7 +21,7 @@
 			</ul>
 		</li>
 		<li><a href="/admin/get_balls_of_users">Значения ПЭД</a></li>
-		<li><a>Структура</a>
+		<li><a>Структура университета</a>
 			<ul>
 				<li><a href="/admin/get_structure">Список</a></li>
 				<li><a href="/admin/update_structure">Обновить</a></li>
