--- a/views/admin/partials/settings-menu.ejs
+++ b/views/admin/partials/settings-menu.ejs
@@ -3,6 +3,6 @@
     <ul>
       <li><a href="/admin/set_period">Текущий период</a></li>
       <li><a href="/admin/close_accounts">Доступ к ЛК</a></li>
-      <li><a href="/admin">Изменить пароль</a></li>
+      <li><a href="/admin/change_password">Изменить пароль</a></li>
     </ul>
   </div>
