--- a/views/admin/settings/page_close_account.ejs
+++ b/views/admin/settings/page_close_account.ejs
@@ -16,7 +16,7 @@
 			<div class="page">
 				<%- include("../partials/settings-menu.ejs") %>
 				<div class="formborderadmin">
-					<h2>Доступ к личным кабинетам</h2>
+					<h2 class="title-page">Доступ к личным кабинетам</h2>
 					<% if(op) {%>
 						<p class="text">Состояние ЛК: кабинеты открыты</p>
 						<form name="close" action="" method="post">
