--- a/views/error/500.ejs
+++ b/views/error/500.ejs
@@ -3,9 +3,11 @@
 <head>
 	<title>Ошибка</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 </head>
 <body>
 	<h3>Что-то пошло не так:(</h3>
+	<p>Обратитесь к разработчику</p>
 	<style type="text/css">
 		h3 {
 			color: red;
