--- a/views/pps/page_values_kpi.ejs
+++ b/views/pps/page_values_kpi.ejs
@@ -3,10 +3,10 @@
 <head>
 	<title>Значения ПЭД</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../../general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="../../general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="../../general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="../../general_style/menu.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 </head>
 <body>
 	<div class="wrapper">
