--- a/public/general_style/common.css
+++ b/public/general_style/common.css
@@ -1,5 +1,14 @@
-h1 {
+.content {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+.title-page {
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
-	color:  #424949;
+    color:  #424949;
+    margin-bottom: 10px;
 }
+.warning {
+    background-color: #ffffcc;
+    border-left: 6px solid #ffeb3b;
+    padding-left: 15px;
+  }
