--- a/views/admin/kpi/page_add_kpi.ejs
+++ b/views/admin/kpi/page_add_kpi.ejs
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 	<link rel="stylesheet" type="text/css" href="./addkpi.css">
 
 	<link rel="stylesheet" type="text/css" href="/plugins/slick-1.8.1/slick/slick.css">
