--- a/views/admin/kpi/page_delete_kpi.ejs
+++ b/views/admin/kpi/page_delete_kpi.ejs
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
 
 </head>
