--- a/views/admin/main_page.ejs
+++ b/views/admin/main_page.ejs
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="logs.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -15,7 +16,7 @@
 			<form action="" method="get">
 				<p class="namelist">История действий пользователей за
 					<input type="date" name="date" id="date" class="date" value=<%=date%>>
-					<input type="submit" class="buttonmypage" value="Вывести">
+					<input type="submit" class="buttonmypage" value="Показать">
 				</p>
 			</form>
 			<ul class="logs" id="logs">
