--- a/views/admin/users/page_add_user.ejs
+++ b/views/admin/users/page_add_user.ejs
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 </head>
 <body>
 	<div class="wrapper">
