--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title>Не найдено</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 </head>
 <body>
 	<h3>Страница не найдена:(</h3>
