add page parse file

--- a/views/admin/partials/menu.ejs
+++ b/views/admin/partials/menu.ejs
@@ -18,6 +18,7 @@
 				<li><a href="/admin/kpi/add_kpi">Добавить</a></li>
 				<li><a href="/admin/kpi/delete_kpi">Удалить</a></li>
 				<li><a href="/admin/kpi/edit_balls">Изменить оценки</a></li>
+				<li><a href="/admin/kpi/past_kpi">Добавить прошлые значения</a></li>
 			</ul>
 		</li>
 		<li><a href="/admin/get_balls_of_users">Значения ПЭД</a></li>
