add page past_kpi

--- a/views/admin/kpi/partials/report_add_past_val_kpi.ejs
+++ b/views/admin/kpi/partials/report_add_past_val_kpi.ejs
@@ -18,7 +18,8 @@
             <%} else {%>
                 <td><%=users[i].numb %></td>
                 <td><%=users[i].name %></td>
-                <td></td>
+                <td>Количество добавленных значений = <%=users[i].countVal %>
+                 (количество ПЭД = <%=users[i].countKpi %>)</td>
                 <td></td>
             <%} %>
         </tr>
