change download files

--- a/views/admin/settings/page_change_password.ejs
+++ b/views/admin/settings/page_change_password.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Изменить пароль</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
