--- a/public/general_style/form.css
+++ b/public/general_style/form.css
@@ -1,58 +1,12 @@
 * {box-sizing: border-box;}
 .form-add {
 	position: relative;
-	width: 50%;
-	margin: 3% auto;
+	margin: 3% 13%;
 	background: white;
 	border-radius: 30px;
 	border: 2px solid #A1B9D5;
 	color: black;
 	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
-}
-.form-left-decoration,
-.form-right-decoration {
-	content: "";
-	position: absolute;
-	width: 50px;
-	height: 20px;
-	background: rgb(233, 236, 248);
-	border-radius: 20px;
-	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
-}
-.form-left-decoration {
-	bottom: 60px;
-	left: -30px;
-	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
-}
-.form-right-decoration {
-	top: 60px;
-	right: -30px;
-	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
-}
-.form-left-decoration:before,
-.form-left-decoration:after,
-.form-right-decoration:before,
-.form-right-decoration:after {
-	content: "";
-	position: absolute;
-	width: 50px;
-	height: 20px;
-	border-radius: 30px;
-	background: white;
-	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
-}
-.form-left-decoration:before {top: -20px;}
-.form-left-decoration:after {
-	top: 20px;
-	left: 10px;
-}
-.form-right-decoration:before {
-	top: -20px;
-	right: 0;
-}
-.form-right-decoration:after {
-	top: 20px;
-	right: 10px;
 }
 
 .circle {
@@ -119,7 +73,6 @@
 	grid-gap: 16px;
 	overflow: hidden;
 }
-
 
 .radio {
 	position: absolute;
