--- a/views/admin/kpi/page_add_past_kpi.ejs
+++ b/views/admin/kpi/page_add_past_kpi.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Добавление прошлых значений</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
@@ -37,10 +38,6 @@
 					<div class="col-form">
 						<input type="checkbox" class="checkbox" name="del_val" id="del_val">
 						<label for="del_val">Удалить все значения ПЭД всех ППС перед добавлением</label>
-					</div>
-					<div class="col-form">
-						<input type="checkbox" class="checkbox" name="check_val" id="check_val">
-						<label for="check_val">Не добавлять значения, у которых совпадает время и файл</label>
 					</div>
 					<div class="col-form">
 						<input type="file" name="file" required>
