--- a/views/admin/page_values_kpi.ejs
+++ b/views/admin/page_values_kpi.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Значения ПЭД</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
