--- a/views/admin/users/page_delete_user.ejs
+++ b/views/admin/users/page_delete_user.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Удаление пользователя</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
 	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
